--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Tap external Homebrew repositories
   homebrew_tap: tap={{ item }} state=present
-  with_items: homebrew_repositories
+  with_items: '{{ homebrew_repositories }}'
   when: homebrew_repositories
 
 - name: Update Homebrew
@@ -12,5 +12,5 @@
     name={{ item.name | default(item) }}
     state={{ item.state | default('latest') }}
     install_options={{ item.install_option | default('') }}
-  with_items: homebrew_packages
+  with_items: '{{ homebrew_packages }}'
   when: homebrew_packages
