--- a/roles/homebrew-cask/tasks/main.yml
+++ b/roles/homebrew-cask/tasks/main.yml
@@ -3,7 +3,7 @@
   homebrew_tap: tap=caskroom/cask state=present
 
 - name: Install/Upgrade Homebrew Cask
-  homebrew: name=brew-cask state=latest
+  homebrew: name=cask state=latest
 
 - name: Tap external Homebrew Cask repositories
   homebrew_tap: tap={{ item }} state=present
